modify on tree type!